[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Planets/PairedExits/EntranceExitPair.gd" type="Script" id=1]
[ext_resource path="res://Resources/Planets/PlanetDefault/Textures/Green.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31, 32.6801 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32.2709, 33.1372 )

[node name="EntranceExitPair" type="Node"]

script = ExtResource( 1 )
entrance_x = null
entrance_y = null
exit_x = null
exit_y = null

[node name="Entrace" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrace" index="0"]

shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="Entrace" index="1"]

scale = Vector2( 0.934623, 1.00878 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Exit" type="Area2D" parent="." index="1"]

position = Vector2( 96.8862, 7.08809 )
scale = Vector2( 0.840194, 0.879321 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Exit" index="1"]

scale = Vector2( 1.11239, 1.14723 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="Entrace" to="." method="_on_Entrace_area_entered"]

[connection signal="area_exited" from="Entrace" to="." method="_on_Entrace_area_exited"]

[connection signal="area_entered" from="Exit" to="." method="_on_Exit_area_entered"]

[connection signal="area_exited" from="Exit" to="." method="_on_Exit_area_exited"]


